syntax = "proto3";
package heron.proto.system;

option java_package = "com.twitter.heron.proto.system";
option java_outer_classname = "PackingPlans";

// This file defines the packing plan of a topology.
// It reflects the the instances and containers of a topology.

message Resource {
  double cpu = 1;
  int64 ram = 2;
  int64 disk = 3;
}

message InstancePlan {
  string component_name = 1;
  int32 task_id = 2;         // global
  int32 component_index = 3; // specific to this component
  Resource resource = 4;
}

message ContainerPlan {
  int32 id = 1;
  repeated InstancePlan instance_plans = 2;
  Resource requiredResource = 3;
  Resource scheduledResource = 4;
}

message PackingPlan {
  string id = 1;
  repeated ContainerPlan container_plans = 2;
}
